--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:icon="@mipmap/image"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Biblioteca"
+        android:theme="@style/Theme.AppCompat.NoActionBar"
         tools:targetApi="31">
         <activity
             android:name=".HomePageActivity"
